force-app/main/default/objects/vlocity_ps__VlocityTrackingComponent__c/fields/vlocity_ps__ComponentType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ComponentType__c</fullName>
    <description>Associated component type.</description>
    <inlineHelpText>Associated component type.</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omniscript</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>