force-app/main/default/objects/vlocity_ps__VlocityTrackingComponent__c/fields/vlocity_ps__ComponentVersion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ComponentVersion__c</fullName>
    <description>Version of the related component.</description>
    <inlineHelpText>Version of the related component.</inlineHelpText>
    <label>Component Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>